# endstone-easyluckypillar

./: .gitignore  README.md  README_EN.md  build-dev.ps1  build-whl.ps1  pyproject.toml  setup.py  update_versions.json
src/endstone_easyluckypillar/: __init__.py  bstats.py  easyluckypillar_plugin.py
